--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,10 +1,4 @@
 body {
     margin: 0;
-    padding: 0;
-    color: #484848;
-}
-
-* {
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-}
+    padding: 0
+} 
