--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,7 +1,8 @@
 footer {
-    background-color: #00FF00;
+    background-color: white;
     height: 60px;
     width: 100%;
+    border-top: 1px solid #CCCCCC;
     position: absolute;
     bottom: 0%;
 }
@@ -9,4 +10,4 @@ footer {
 p.footer {
     text-align: center;
     vertical-align: middle;
-} 
+}
