--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,11 +3,9 @@ footer {
     height: 60px;
     width: 100%;
     border-top: 1px solid #CCCCCC;
-    position: absolute;
+    position: fixed;
     bottom: 0%;
-}
-
-p.footer {
-    text-align: center;
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
