--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,11 +3,17 @@ header {
     border-bottom: 1px solid #CCCCCC;
     height: 70px;
     width: 100%;
-    
 }
 
 .logo {
+    background-image: url("../images/logo.png");
     left: 20px;
-    vertical-align: center;
-    position: absolute;
+    vertical-align: middle;
+    align-content: left;
+    width: 142px;
+	height: 60px;
+	background-repeat: no-repeat;
+    position: relative;
+    display: inline-block;
+    background-position: center;
 }
